
By: smueller on 2006/08/25
Log:
    * Added the generate_blib_stub method.
    * Added parse_dist_name to @EXPORT_OK
    * This is PAR::Dist 0.18.
____________________________________________________________________________
By: smueller on 2006/08/23
Log:
    * Fixed merge_par for relative paths.
    * This is PAR::Dist 0.17.
____________________________________________________________________________
By: smueller on 2006/08/09
Log:
    * Fixed tests for parse_dist_name.
    * Release 0.15_02
____________________________________________________________________________
By: smueller on 2006/08/02
Log:
    * Added the parse_dist_name routine which was previously shipped with
      both PAR::Repository and PAR::Repository::Client.
    * Changed the distribution name detection heuristics to favour the
      distribution name determined from META.yml and then those from
      parse_dist_name.
    * Version bump to 0.15_01.
____________________________________________________________________________
By: smueller on 2006/07/28
Log:
    * PAR::Dist would previously generate bad file names and META.yml if
      the newlines contained Windows' \r. That's history.
    * This is 0.15.
____________________________________________________________________________
By: smueller on 2006/07/25
Log:
    * Changed the calling conventions of remove_man to better resemble
      those of the other functions. (This is backwards compatible.)
    * Added get_meta() function.
    * Slight documentation fixes.
    * Version bump to 0.15.
____________________________________________________________________________
By: audreyt on 2006/07/19
Log:
    * The "version" field of META.yml files written by Module::Build
      was not parsed correctly by the ad-hoc YAML parser.
      Reported by: Jesse Vincent
    * Remove the 0-signature.t.
    * This be 0.14
____________________________________________________________________________
By: smueller on 2006/07/22
Log: