@@ -3,6 +3,7 @@ By: smueller on 2006/08/25
 Log:
     * Added the generate_blib_stub method.
     * Added parse_dist_name to @EXPORT_OK
+    * Upgraded Module::Install to 0.64
     * This is PAR::Dist 0.18.
 ____________________________________________________________________________
 By: smueller on 2006/08/23
